# sui-move-playground

./: .gitignore  DEPLOYMENT_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  LICENSE  MESSAGE.md  PRODUCTION_DEPLOYMENT.md  README.md  logrotate.conf  manage.sh  package.json  run.sh  sui-move-playground.service
api/: Cargo.toml  Move.toml  cli.rs  package-lock.json  package.json  server.js  targets.rs  test_example.move  utils.rs
api/sources/: Move.toml  event_test_math.move  hello.move  hello.move.output  minimal.move  simple.move
api/src/: lib.rs  main.rs
app/: layout.tsx  page.tsx
components/common/: error-boundary.tsx
components/editor/: code-editor.tsx  monaco-editor.tsx  move-help-panel.tsx
components/header/: header.tsx
components/layout/: playground-layout.tsx
components/providers/: playground-provider.tsx
components/result/: result-panel.tsx
components/sidebar/: config-editor.tsx  example-selector.tsx  file-manager.tsx  sidebar.tsx
deploy/: sui-move-api.service
deploy/templates/: sui-move-api.service.template  sui-move-playground.service.template
docs/: PROJECT_STRUCTURE.md  api_documentation.md
hooks/: use-mobile.ts
lib/: types.ts
lib/constants/: move-snippets.ts
lib/hooks/: use-mobile.tsx  use-playground-actions.tsx
lib/monaco/: move-language.ts
lib/providers/: playground-provider.tsx
lib/services/: api-service.ts
scripts/: manage.sh  run.sh
services/: api-service.ts
types/: index.ts
web/: index.html  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: CodeEditor.tsx  CompileResult.tsx  ConfirmModal.tsx  DeployOptions.tsx  EditAddressesModal.tsx  ExampleSelector.tsx  FileSystemPanel.tsx  MainEditorPanel.tsx  OperationResult.tsx  RightPanel.tsx
web/src/hooks/: useCompiler.ts  useDeployer.ts  useTester.ts
web/src/languages/: move.ts
web/src/services/: api.ts  config.ts
(+3 files in other folders)
