[package]
name = "move-web-compiler"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "move-web-compiler"
path = "src/main.rs"

[addresses]
std =  "0x1"
sui = "0x2"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6.4"
walkdir = "2.3"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4.39"

# Move依赖
move-vm-runtime = { git = "https://github.com/move-language/move.git", branch = "main" }
move-vm-types = { git = "https://github.com/move-language/move.git", branch = "main" }
move-core-types = { git = "https://github.com/move-language/move.git", branch = "main" }
move-binary-format = { git = "https://github.com/move-language/move.git", branch = "main" }
move-compiler = { git = "https://github.com/move-language/move.git", branch = "main" }
move-stdlib = { git = "https://github.com/move-language/move.git", branch = "main" }

# Sui依赖 - 使用主分支
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-types = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-keys = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-json = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-transaction-builder = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
sui-move-build = { git = "https://github.com/MystenLabs/sui.git", branch = "main" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", branch = "main" }

# 其他依赖
clap = "3.2"
bcs = "0.1"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
dirs = "5.0"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
tiny-bip39 = "1.0"

# 固定其他可能冲突的包版本
# tempfile = "=3.10.1"
toml = "=0.5.8"
codespan-reporting = "=0.11.1"
